fix x overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@ body, html {
     height: 100%;
     background-color: rgba(17, 17, 17, 0);
     height:  100%;
+    overflow-x: hidden;
 }
 
 /* Sub Team Stylings */
